Fix list spacing

--- a/_assets/css/veil.css
+++ b/_assets/css/veil.css
@@ -432,9 +432,12 @@ a {
     @apply text-base uppercase tracking-wide;
   }
 
-  ul {
+  ul, ol {
     padding-left: 1.33rem;
     @apply .mb-6;
+    li + li {
+      @apply .mt-2;
+    }
   }
 
   a {
